syntax = "proto3";

package memos.api.v1;

import "google/api/annotations.proto";

option go_package = "gen/api/v1";

service WorkspaceService {
  // GetWorkspaceProfile returns the workspace profile.
  rpc GetWorkspaceProfile(GetWorkspaceProfileRequest) returns (WorkspaceProfile) {
    option (google.api.http) = {get: "/api/v1/workspace/profile"};
  }
}

message WorkspaceProfile {
  // The name of instance owner.
  // Format: "users/{id}"
  string owner = 1;
  // version is the current version of instance
  string version = 2;
  // mode is the instance mode (e.g. "prod", "dev" or "demo").
  string mode = 3;
  // public is a flag that the instance is open for other users.
  bool public = 4;
  // password_auth is a flag whether the instance allows password authentication.
  bool password_auth = 5;
}

message GetWorkspaceProfileRequest {}
